@@ -1,3 +1,11 @@
+Sat Jun  2 21:04:32 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* SIM modules are not delivered to SILC CLient distribution
+	  anymore.
+
+	* Removed --with-etcdir and --with-docdir.  The etcdir is now
+	  the system's default.  The Docdir is system's default.
+
 Sat Jun  2 00:51:57 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* If public key/private key loading fails set the return
